# deproc

./: LICENSE  README.md  pyproject.toml
deproc-core/: pyproject.toml
deproc-core/deproc/core/: __init__.py  config.py  context.py  discovery.py
deproc-core/deproc/core/interfaces/: __init__.py  linker.py  resolver.py  symbol_cache.py
deproc-core/deproc/core/interfaces/parser/: base.py  models.py
deproc-core/deproc/core/interfaces/symbol_table_builder/: __init__.py  base.py
deproc-core/deproc/core/runtime/: __init__.py  contracts.py
deproc-core/deproc/core/runtime/registries/: __init__.py  entity.py  plugin.py
deproc-core/tests/: test_context.py  test_discovery.py  test_entity_registry.py  test_models.py
deproc-python/: pyproject.toml
deproc-python/deproc/plugins/python/: __init__.py
deproc-python/deproc/plugins/python/linker/: main.py  models.py
deproc-python/deproc/plugins/python/parser/: __init__.py  main.py  models.py
deproc-python/deproc/plugins/python/resolver/: main.py  models.py  utils.py
deproc-python/deproc/plugins/python/symbol_cache/: main.py  models.py
deproc-python/deproc/plugins/python/symbol_table_builder/: __init__.py  main.py
deproc-python/deproc/plugins/python/tests/: __init__.py
deproc-python/tests/: test_linker.py  test_parser.py  test_plugin_registry.py  test_resolver.py  test_symbol_cache.py  test_symbol_table_builder.py
deproc-utils-tree-sitter/: pyproject.toml
deproc-utils-tree-sitter/deproc/utils/: __init__.py  tree_walk.py
deproc_core/: __init__.py  __main__.py  api.py  base.py  config.py  interfaces.py  models.py  processor.py  pyproject.toml  registry.py
deproc_core/deproc/core/: __init__.py  config.py  context.py  discovery.py
deproc_core/deproc/core/interfaces/: __init__.py  linker.py  plugin_registry.py  resolver.py  symbol_table_builder.py
deproc_core/deproc/core/interfaces/alias_finder/: __init__.py  base.py  models.py
deproc_core/deproc/core/interfaces/model_conversion/: __init__.py  base.py
deproc_core/deproc/core/interfaces/parser/: __init__.py  base.py  models.py
deproc_core/deproc/core/interfaces/symbol_table_builder/: __init__.py  main.py  models.py
deproc_core/deproc/core/runtime/: __init__.py  contracts.py
deproc_core/deproc/core/runtime/registries/: __init__.py  entity.py
deproc_core/interfaces/: __init__.py  alias_finder.py
deproc_core/interfaces/alias_finder/: __init__.py
deproc_core/interfaces/discovery/: __init__.py  core.py
deproc_core/interfaces/extraction/: models.py
deproc_core/interfaces/model_conversion/: __init__.py  base.py  models.py
deproc_core/interfaces/parser/: __init__.py  base.py  core.py  models.py  registry.py
deproc_core/runtime/: __init__.py  contracts.py  registry.py
deproc_python/: __init__.py  plugin.py  pyproject.toml
deproc_python/deproc/plugins/python/: core.py
deproc_python/deproc/plugins/python/linker/: __init__.py  main.py  models.py
deproc_python/deproc/plugins/python/parser/: main.py  (+1 more)
(+18 files in other folders)
