[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deproc-core"
version = "0.1.0"
description = "Language-agnostic core contracts and runtime for deproc plugins."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["deproc.core*"]

