[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deputy-python"
version = "0.1.0"
description = "Python language plugin for deputy."
requires-python = ">=3.10"
dependencies = ["deputy-core", "tree-sitter>=0.25.0", "tree-sitter-python>=0.25.0"]

[project.entry-points."deproc.languages"]
python = "deproc_python.plugin:PythonLanguagePlugin"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["deproc_python*"]

